Das filter_geodata Skript entsprechend dem Analyse-Notebook angepasst und click zum Parsing von CLI-Argumenten eingebaut

--- a/preparation/data_analysis/analyze_geodata.ipynb
+++ b/preparation/data_analysis/analyze_geodata.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysiere die Koordinaten, um Outlier bei den X- und Y-Werten zu finden"
+    "### Analysiere die Koordinaten, um Outlier bei den X- und Y-Werten zu finden"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bereinigung von fehlerhaften Werten in den X- und Y-Koordinaten\n",
+    "### Bereinigung von fehlerhaften Werten in den X- und Y-Koordinaten\n",
     "\n",
     "Wir verwenden `0` als Schwellenwert, um fehlerhafte Werte in den X- und Y-Koordinaten zu entfernen, da legitime geografische Koordinaten typischerweise positive Werte sind und der Wert `-1.797693e+308` auf einen technischen Fehler hinweist."
    ]
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Speichern der bereinigten Daten in einer neuen GeoJSON-Datei"
+    "### Speichern der bereinigten Daten in einer neuen GeoJSON-Datei"
    ]
   },
   {
