Das Notebook zur Analyse der Geodaten auf den neuen Datensatz angepasst (Checks erfolgreich)

--- a/preparation/input_analysis/analyze_geodata.ipynb
+++ b/preparation/input_analysis/analyze_geodata.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Annahme:** Die zu analysierende GeoJSON-Datei liegt in `../data` und wurde als `trees.geojson` benannt.\n"
+    "**Annahme:** Die zu analysierende GeoJSON-Datei liegt in `../input` und wurde als `trees.geojson` benannt.\n"
    ]
   },
   {
@@ -80,7 +80,7 @@
     "gdf = gpd.read_file(DATA_PATH)\n",
     "\n",
     "# Anzeigen der ersten fünf Zeilen des GeoDataFrame\n",
-    "gdf.head()\n"
+    "gdf.head()"
    ]
   },
   {
